force-app/main/default/objects/PMC_SS_CasePriorityAssignment__mdt/PMC_SS_CasePriorityAssignment__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to set the Case priority based on Case Type And Account Segmentation.</description>
    <label>PMC SS Case Priority Assignment</label>
    <pluralLabel>PMC SS Case Priority Assignments</pluralLabel>
</CustomObject>