force-app/main/default/objects/PMC_SS_CasePriorityAssignment__mdt/fields/PMC_SS_IssueReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IssueReason__c</fullName>
    <label>Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Delay</fullName>
            </value>
            <value>
                <fullName>Missing Cargo</fullName>
            </value>
            <value>
                <fullName>Incorrect Destination</fullName>
            </value>
            <value>
                <fullName>Ship Date / Scheduling</fullName>
            </value>
            <value>
                <fullName>Equipment Failure</fullName>
            </value>
            <value>
                <fullName>Diversion</fullName>
            </value>
            <value>
                <fullName>Demurrage</fullName>
            </value>
            <value>
                <fullName>Incorrect UOM</fullName>
            </value>
            <value>
                <fullName>Driver Verification/Change</fullName>
            </value>
            <value>
                <fullName>Route / Directions</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Mode of transportation</fullName>
            </value>
            <value>
                <fullName>Weight Discrepancy</fullName>
            </value>
            <value>
                <fullName>Incorrect Product</fullName>
            </value>
            <value>
                <fullName>Product Concern</fullName>
            </value>
            <value>
                <fullName>Incorrect Label</fullName>
            </value>
            <value>
                <fullName>Product Request</fullName>
            </value>
            <value>
                <fullName>Account Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Document Request</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Stock Out / Plant Outage</fullName>
            </value>
            <value>
                <fullName>Article Request</fullName>
            </value>
            <value>
                <fullName>MDM Verification</fullName>
            </value>
            <value>
                <fullName>Incorrect Vehicle ID</fullName>
            </value>
            <value>
                <fullName>Invoice Adjustments</fullName>
            </value>
            <value>
                <fullName>Order Date</fullName>
            </value>
            <value>
                <fullName>Destination Change</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>