force-app/main/default/objects/PMC_SS_CasePriorityAssignment__mdt/fields/PMC_SS_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Segmentation__c</fullName>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
                <default>true</default>
                <label>Strategic</label>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Ultra</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Mega Farmers</fullName>
            </value>
            <value>
                <fullName>Top Farmers</fullName>
            </value>
            <value>
                <fullName>Farmers</fullName>
            </value>
            <value>
                <fullName>Mid Farmers</fullName>
            </value>
            <value>
                <fullName>Small Farmers</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Canal KAM</fullName>
                <label>Canal - KAM</label>
            </value>
            <value>
                <fullName>Trader KAM</fullName>
                <label>Trader - KAM</label>
            </value>
            <value>
                <fullName>Mega Farmer KAM</fullName>
                <label>EU - KAM Mega Farmer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>