force-app/main/default/objects/PMC_SS_CasePriorityAssignment__mdt/fields/PMC_SS_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipping</fullName>
                <default>true</default>
                <label>Shipping</label>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Mosaic Direct</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Transactions</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
                <isActive>false</isActive>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Internal Request</fullName>
                <isActive>false</isActive>
                <label>Internal Request</label>
            </value>
            <value>
                <fullName>NPK Blend Request</fullName>
                <isActive>false</isActive>
                <label>NPK Blend Request</label>
            </value>
            <value>
                <fullName>New Product Registration</fullName>
                <isActive>false</isActive>
                <label>New Product Registration</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <isActive>false</isActive>
                <label>Order</label>
            </value>
            <value>
                <fullName>Technical</fullName>
                <isActive>false</isActive>
                <label>Technical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>